force-app/main/default/objects/KimbleOne__ResourcedActivityOther__c/KimbleOne__ResourcedActivityOther__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Other Activity</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Other Activity Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>