force-app/main/default/objects/KimbleOne__ResourcedActivityOther__c/fields/KimbleOne__ActivityStatus__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActivityStatus__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + KimbleOne__ResourcedActivity__r.KimbleOne__ActivityStatus__c , KimbleOne__ResourcedActivity__r.KimbleOne__ActivityStatus__r.Name,&apos;_self&apos;)</formula>
    <label>Activity Status</label>
    <type>Text</type>
</CustomField>