force-app/main/default/objects/KimbleOne__ResourcedActivityOther__c/fields/KimbleOne__BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BusinessUnit__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + KimbleOne__ResourcedActivity__r.KimbleOne__BusinessUnit__c , KimbleOne__ResourcedActivity__r.KimbleOne__BusinessUnit__r.Name,&apos;_self&apos;)</formula>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>