force-app/main/default/objects/KimbleOne__ResourcedActivityOther__c/fields/KimbleOne__CanSelfForecast__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CanSelfForecast__c</fullName>
    <formula>KimbleOne__ResourcedActivity__r.KimbleOne__CanSelfForecast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Self Assign?</label>
    <type>Checkbox</type>
</CustomField>