force-app/main/default/objects/KimbleOne__ResourcedActivityOther__c/fields/KimbleOne__IsTimeUnpaid__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsTimeUnpaid__c</fullName>
    <formula>KimbleOne__ResourcedActivity__r.KimbleOne__IsTimeUnpaid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Time Unpaid?</label>
    <type>Checkbox</type>
</CustomField>