force-app/main/default/objects/KimbleOne__ResourcedActivityOther__c/fields/KimbleOne__IsTimeUntracked__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsTimeUntracked__c</fullName>
    <formula>KimbleOne__ResourcedActivity__r.KimbleOne__IsTimeUntracked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Obsolete - Is Time Untracked?</label>
    <type>Checkbox</type>
</CustomField>