force-app/main/default/objects/KimbleOne__ResourcedActivityOther__c/fields/KimbleOne__IsUnavailable__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsUnavailable__c</fullName>
    <formula>KimbleOne__ResourcedActivity__r.KimbleOne__IsUnavailable__c</formula>
    <label>Is Unavailable?</label>
    <type>Checkbox</type>
</CustomField>