force-app/main/default/objects/KimbleOne__ResourcedActivityOther__c/fields/KimbleOne__NameLink__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__NameLink__c</fullName>
    <formula>HYPERLINK(&quot;/?sort=&quot; &amp; KimbleOne__ResourcedActivity__r.Name, &quot;&quot;, &quot;_self&quot;) &amp; 
HYPERLINK(&quot;/&quot; &amp; Id, KimbleOne__ResourcedActivity__r.Name,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>