force-app/main/default/objects/KimbleOne__ResourcedActivityOther__c/fields/KimbleOne__SelfForecastApprovalRequired__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SelfForecastApprovalRequired__c</fullName>
    <formula>KimbleOne__ResourcedActivity__r.KimbleOne__SelfForecastApprovalRequired__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires Approval?</label>
    <type>Checkbox</type>
</CustomField>