force-app/main/default/objects/KimbleOne__ResourcedActivityOther__c/fields/KimbleOne__UtilisationRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UtilisationRule__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + KimbleOne__ResourcedActivity__r.KimbleOne__UtilisationRule__c , KimbleOne__ResourcedActivity__r.KimbleOne__UtilisationRule__r.Name,&apos;_self&apos;)</formula>
    <label>Utilisation Rule</label>
    <type>Text</type>
</CustomField>