force-app/main/default/objects/KimbleOne__ResourcedActivityOther__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>KimbleOne__NameLink__c</columns>
    <columns>KimbleOne__BusinessUnit__c</columns>
    <columns>KimbleOne__IsUnavailable__c</columns>
    <columns>KimbleOne__IsTimeUnpaid__c</columns>
    <columns>KimbleOne__UtilisationRule__c</columns>
    <columns>KimbleOne__CanSelfForecast__c</columns>
    <columns>KimbleOne__SelfForecastApprovalRequired__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>